--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -189,4 +189,10 @@
 
     <style name="AppTheme.FullScreen.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="cityAnimation">
+        <item name="android:layout_width">0dp </item>
+        <item name="android:layout_height">0dp </item>
+        <item name="android:scaleType">fitXY</item>
+    </style>
+
 </resources>
