--- a/app/src/main/res/layout/fragment_add_external_file.xml
+++ b/app/src/main/res/layout/fragment_add_external_file.xml
@@ -59,31 +59,15 @@
             app:layout_constraintTop_toTopOf="parent"
             tools:srcCompat="@tools:sample/avatars" />
 
-        <FrameLayout
-            android:id="@+id/video_layout"
+        <VideoView
+            android:id="@+id/videoView"
             android:layout_width="600dp"
             android:layout_height="400dp"
-            android:background="@android:color/black"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <com.universalvideoview.UniversalVideoView
-                android:id="@+id/videoView"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:layout_gravity="center"
-                app:uvv_autoRotation="true"
-                app:uvv_fitXY="false" />
-
-            <com.universalvideoview.UniversalMediaController
-                android:id="@+id/media_controller"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                app:uvv_scalable="true" />
-
-        </FrameLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
