--- a/app/src/main/res/layout/backpack_menu_filter.xml
+++ b/app/src/main/res/layout/backpack_menu_filter.xml
@@ -1,10 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools">
+<data>
+
+    <variable
+        name="backpackViewModel"
+        type="be.hogent.faith.faith.backpackScreen.BackpackViewModel" />
+    <import type="android.view.View" />
+</data>
+<androidx.constraintlayout.widget.ConstraintLayout
     android:id="@+id/include"
     android:layout_width="wrap_content"
     android:layout_height="match_parent">
+
 
     <ImageView
         android:id="@+id/background_filter_menu"
@@ -49,7 +59,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:backgroundTint="#FFFFFF"
-
+                android:onClick="@{() -> backpackViewModel.onFilterTextClicked()}"
                 android:contentDescription="@string/filter_btn_text"
                 app:srcCompat="@drawable/filterknop_teksten" />
 
@@ -58,6 +68,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:backgroundTint="#FFFFFF"
+                android:onClick="@{() -> backpackViewModel.onFilterAudioClicked()}"
                 android:contentDescription="@string/filter_btn_audio"
                 app:srcCompat="@drawable/filterknop_audio" />
 
@@ -66,7 +77,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:backgroundTint="#FFFFFF"
-
+                android:onClick="@{() -> backpackViewModel.onFilterPhotosClicked()}"
                 android:contentDescription="@string/filter_btn_foto"
                 app:srcCompat="@drawable/filterknop_foto" />
         </TableRow>
@@ -80,7 +91,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:backgroundTint="#FFFFFF"
-
+                android:onClick="@{() -> backpackViewModel.onFilterDrawingClicked()}"
                 android:contentDescription="@string/filter_btn_drawing"
                 app:srcCompat="@drawable/filterknop_tekeningen" />
 
@@ -89,7 +100,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:backgroundTint="#FFFFFF"
-
+                android:onClick="@{() -> backpackViewModel.onFilterVideoClicked()}"
                 android:contentDescription="@string/filter_btn_video"
                 app:srcCompat="@drawable/filterknop_film" />
 
@@ -143,3 +154,4 @@
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
