De detailViews togevoegd - abstracte klasse ViewDetailBaseViewModel gemaakt - de files moet ik downloaden van firestorage. Hiervoor heb ik onderstaande aangepast. Dit moet eventueel worden aangepast na de encryptie   -MyAppGlideModule   -voor TextDetail en AudioDetail : extra functionaliteit in ViewModel  - in StorageRepo : getFile toegevoegd

--- a/app/src/main/res/layout/fragment_library_eventlist.xml
+++ b/app/src/main/res/layout/fragment_library_eventlist.xml
@@ -18,7 +18,9 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#00000000">
+            android:background="#00000000"
+            android:focusable="true"
+            android:focusableInTouchMode="true">
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guideline_library_eventlist_left"
