--- a/app/src/main/res/layout/fragment_library_eventlist.xml
+++ b/app/src/main/res/layout/fragment_library_eventlist.xml
@@ -44,9 +44,9 @@
                 android:layout_marginTop="16dp"
                 android:background="@drawable/ic_return"
                 android:contentDescription="@string/cancel"
+                android:onClick="@{() -> eventlistViewModel.onCancelButtonClicked()}"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:onClick="@{() -> eventlistViewModel.onCancelButtonClicked()}"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/textInputLayout_library_eventlist_search"
@@ -159,11 +159,11 @@
                 android:layout_height="31dp"
                 android:background="@drawable/ic_prullenmand"
                 android:contentDescription="@string/cancel"
+                android:onClick="@{() -> eventlistViewModel.onDeleteClicked()}"
                 app:layout_constraintBottom_toBottomOf="@+id/btn_library_eventlist_cancel"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/guideline_library_eventlist_right"
-                app:layout_constraintTop_toTopOf="@+id/btn_library_eventlist_cancel"
-                 android:onClick="@{() -> eventlistViewModel.onCancelButtonClicked()}"/>
+                app:layout_constraintTop_toTopOf="@+id/btn_library_eventlist_cancel" />
 
             <ImageView
                 android:layout_width="wrap_content"
